changed to first title

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
 
-    <h1>Best football skills ever seen</h1>
+    <h1>Best football skills/h1>
     <img src="images/youtube3.png" height="200" width="300" alt="">
 
 
